projects/amiya.akn/dist/apps/zot-registry/gateway.networking.k8s.io.v1beta1.ReferenceGrant.envoy-gateway-system-to-zot.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  labels:
    app.kubernetes.io/name: zot
  name: envoy-gateway-system-to-zot
  namespace: zot-registry
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Service
      name: zot
