projects/amiya.akn/dist/apps/zot-registry/gateway.networking.k8s.io.v1beta1.ReferenceGrant.in-gateway-system-to-zot.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  labels:
    app.kubernetes.io/name: zot
  name: in-gateway-system-to-zot
  namespace: zot-registry
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: in-gateway-system
  to:
  - group: ""
    kind: Service
    name: zot
