projects/amiya.akn/dist/apps/zot-registry/core.v1.Service.zot.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zot
    app.kubernetes.io/version: v2.1.17
    helm.sh/chart: zot-0.1.116
  name: zot
  namespace: zot-registry
spec:
  ports:
  - name: zot
    port: 5000
    protocol: TCP
    targetPort: zot
  selector:
    app.kubernetes.io/instance: zot
    app.kubernetes.io/name: zot
  type: ClusterIP
