projects/amiya.akn/dist/apps/zot-registry/gateway.networking.k8s.io.v1.HTTPRoute.zot.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/include-unifi: "true"
    link.argocd.argoproj.io/external-link: https://oci.chezmoi.sh
  labels:
    app.kubernetes.io/name: zot
  name: zot
  namespace: zot-registry
spec:
  hostnames:
  - oci.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: default
    namespace: in-gateway-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: zot
      port: 5000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 600s
