projects/amiya.akn/dist/apps/zot-registry/cilium.io.v2.CiliumNetworkPolicy.allow-zot-from-cilium-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows the Cilium Gateway API to route traffic to the ZOT registry application.
      Traffic proxied by Cilium Gateway API carries the reserved:ingress identity,
      as per https://docs.cilium.io/en/latest/security/policy/layer3/#entities-based
  labels:
    app.kubernetes.io/name: zot
  name: allow-zot-from-cilium-gateway
  namespace: zot-registry
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zot
  ingress:
  - fromEntities:
    - ingress
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
