projects/amiya.akn/dist/apps/zot-registry/cilium.io.v2.CiliumNetworkPolicy.allow-zot-from-envoy-gateway.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Envoy Gateway to route traffic to ZOT registry application.
  labels:
    app.kubernetes.io/name: zot
  name: allow-zot-from-envoy-gateway
  namespace: zot-registry
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zot
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "5000"
        protocol: TCP
