projects/amiya.akn/dist/apps/zot-registry/cilium.io.v2.CiliumNetworkPolicy.allow-zot-to-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows ZOT registry to access the internet for pulling upstream container images
      when acting as a caching proxy or mirror.
  labels:
    app.kubernetes.io/name: zot
  name: allow-zot-to-internet
  namespace: zot-registry
spec:
  egress:
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      - port: "80"
        protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: zot
